@@ -36,6 +36,7 @@
 * Delete Mango work directory on upgrade as it is only used for the legacy UI
 * Fix bug where the quantize setting on a data source was not being imported in a JSON import
 * Add ability for modules to define asynchronous servlets
+* Upgrade apache commons database pool library (commons-dbcp2) to 2.7.0 
 
 *Version 3.7.4*
 * Improve work item failure logging
